--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -4,6 +4,8 @@ $color-gradient: linear-gradient(225deg, #00b9b6 0%, #00cdac 100%);
 $color-white: #ffff;
 $color-black: #0000;
 $color-turquoise: #00b9b6;
+$color-dark: #333333;
+$color-black2: #0e0e0f;
 
 $fw-regular: 400;
 $fw-medium: 500;
