--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,15 @@
 @import "container";
 @import "all-style";
 @import "header";
+@import "logo";
+@import "menu";
+@import "vars";
+@import "conversation";
+@import "banner";
+@import "app";
+@import "title";
+@import "speakers";
+@import "help";
+@import "advantage";
+@import "steps";
+@import "about";
