--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,3 +13,7 @@
 @import "advantage";
 @import "steps";
 @import "about";
+@import "how-work";
+@import "servises";
+@import "app-2";
+@import "reviews";
