--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -23,9 +23,14 @@
   }
 }
 
+.numbers {
+  display: flex;
+  flex-flow: column;
+  gap: 40px;
+}
 .numbers__item {
   list-style: none;
-  padding-bottom: 40px;
+  gap: 40px;
   align-items: center;
 
   &__nums {
