--- a/scss/_reviews.scss
+++ b/scss/_reviews.scss
@@ -55,24 +55,26 @@
   color: #333333;
 }
 
-.dots {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 0px;
-  transform: rotate(-90deg);
+// .dots {
+//   display: flex;
+//   flex-direction: column;
+//   align-items: flex-start;
+//   padding: 0px;
+//   transform: rotate(-90deg);
 
-  &__line {
-    min-height: 20px;
-    border: 2px solid rgba(0, 185, 182, 0.25);
-    margin: 5px 0px;
-    color: #00b9b6;
-    cursor: pointer;
-    transition: all 0.2s;
-    align-items: flex-end;
+//   &__line {
+//     min-height: 20px;
+//     border: 2px solid rgba(0, 185, 182, 0.25);
+//     margin: 5px 0px;
+//     color: #00b9b6;
+//     cursor: pointer;
+//     transition: all 0.2s;
+//     align-items: flex-end;
+//     text-align: center;
+//     z-index: 1;
 
-    &:hover {
-      color: #1c5e5c;
-    }
-  }
-}
+//     &:hover {
+//       color: #1c5e5c;
+//     }
+//   }
+// }
