--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,13 +1,15 @@
 @import "vars";
 
 .header {
-  padding: 29px 0;
+  max-width: 1120px;
+  margin-bottom: 74px;
 
   &__nav-toggle {
     display: none;
   }
 
   &__inner {
+    padding: 27px 0;
     max-width: 1120px;
     display: flex;
     justify-content: space-between;
