--- a/scss/_advantage.scss
+++ b/scss/_advantage.scss
@@ -1,16 +1,20 @@
 @import "vars";
 
 .advantage {
-  margin-bottom: 140px;
+  margin-bottom: 118px;
+  padding: 0;
   display: flex;
   width: 100%;
   justify-content: space-between;
   background: rgba(0, 185, 182, 0.1);
   border-radius: 24px;
 
+  &__title {
+    padding-left: 10px;
+  }
   &__left {
     position: relative;
-    top: -70px;
+    top: -40px;
 
     &-img {
       padding: 0 45px 0 45px;
@@ -18,13 +22,18 @@
   }
 
   &__right {
+    display: flex;
+    flex-flow: column;
+    align-items: flex-start;
     margin: 0;
-    padding: 50px 30px 116px 0;
+    padding: 85px 30px 116px 0;
   }
 
   &__title {
     margin: 0;
-    padding-bottom: 40px;
+    padding-bottom: 44px;
+    padding-left: 18px;
+    letter-spacing: 2.5px;
   }
 }
 
@@ -32,6 +41,10 @@
   margin: 0;
 
   &__item {
+    display: flex;
+    flex-flow: column;
+    align-items: flex-start;
+    justify-content: flex-start;
     padding-bottom: 20px;
     list-style: none;
   }
@@ -49,7 +62,7 @@
       position: absolute;
       content: "•";
       color: #00b9b6;
-      left: -12px;
+      // left: -10px;
     }
   }
 
