--- a/scss/_all-style.scss
+++ b/scss/_all-style.scss
@@ -17,3 +17,9 @@ body {
   line-height: 21px;
   background: #e5e5e5;
 }
+
+.container {
+  max-width: 1150px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
