--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -1,7 +1,7 @@
 @import "vars";
 
 .app {
-  margin-bottom: 139.5px;
+  margin-bottom: 135px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -44,6 +44,7 @@
 
   &__title {
     margin: 0;
+    padding-bottom: 4px;
     font-family: $main-font;
     font-style: normal;
     font-weight: $fw-semiBold;
@@ -66,6 +67,19 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-
   gap: 20px;
 }
+
+.appstore {
+  padding-bottom: 100px;
+}
+
+.playstore__img {
+  padding-bottom: 100px;
+  // width: 140px;
+  // height: 44px;
+}
+
+// .app__title {
+//   padding-bottom: 40px;
+// }
