--- a/scss/_servises.scss
+++ b/scss/_servises.scss
@@ -4,31 +4,48 @@
   margin-bottom: 158px;
 
   &__title {
-    padding-bottom: 67.5px;
+    padding-bottom: 18px;
+    letter-spacing: 2.5px;
   }
 
   &__inner {
     display: flex;
-    justify-content: space-between;
+    // justify-content: space-between;
     align-items: center;
   }
 }
-.card__left {
-  max-width: 454px;
-  min-height: 317px;
-  padding: 0px 20px;
-  text-align: justify;
+.cards__left {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 30px;
+  margin-right: 22px;
+  position: static;
+  width: 454px;
+  height: 317px;
+  left: 0px;
+  top: 17.5px;
   background: rgba(0, 185, 182, 0.1);
   border-radius: 24px;
 }
 
 .card__payment {
-  padding: 30px;
-  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  padding-bottom: 36px;
+  position: static;
+  width: 394px;
+  // height: 89px;
+  left: 30px;
+  top: 30px;
+  // padding: 30px 120px 28px 25px;
+  // margin: 0;
 }
 
 .card__payment-time {
-  padding: 5px 0px;
+  // padding: 16px 0px 7px;
   margin: 0;
   font-family: $main-font;
   font-style: normal;
@@ -40,13 +57,13 @@
 
 .card__payment-price {
   margin: 0;
-  padding-right: 5px;
   font-weight: 700;
   font-size: 56px;
   line-height: 100%;
   color: #333333;
 }
 .card__payment-week {
+  padding-left: 10px;
   font-family: $main-font;
   font-style: normal;
   font-weight: $fw-regular;
@@ -57,8 +74,8 @@
 
 .card__list {
   margin: 0;
-  padding-bottom: 30px;
-  text-align: justify;
+  padding-left: 0;
+  padding-bottom: 18px;
 }
 
 .card__item {
@@ -80,7 +97,6 @@
 }
 
 .card__btn {
-  margin-left: 30px;
   padding: 12px 30px 14px;
   font-family: $main-font;
   font-style: normal;
@@ -165,10 +181,6 @@
   }
 }
 
-.card__list {
-  padding: 0 30px 30px 30px;
-}
-
 .card__item2 {
   padding-bottom: 10px;
   font-family: $main-font;
@@ -188,9 +200,9 @@
 }
 
 .card__bottom {
-  margin: 0 30px 30px 30px;
+  padding: 0 30px 30px 30px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 
   &-input {
@@ -200,8 +212,13 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 0px 20px;
+    padding: 0px 10px;
+    margin-right: 20px;
     background: #ffffff;
     border-radius: 12px;
   }
+}
+
+.lists {
+  padding-left: 30px;
 }
