--- a/scss/_steps.scss
+++ b/scss/_steps.scss
@@ -1,7 +1,7 @@
 @import "vars";
 
 .steps {
-  margin-bottom: 140px;
+  margin-bottom: 90px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -9,7 +9,8 @@
 
   &__title {
     margin: 0;
-    padding: 5px;
+    padding: 3px;
+    letter-spacing: 2px;
   }
 
   &__info {
@@ -20,21 +21,32 @@
     line-height: 140%;
     color: $color-turquoise;
   }
+
+  &__right {
+    width: 408px;
+    height: 428px;
+    text-align: center;
+    img {
+      margin: 27px;
+    }
+  }
 }
 
 .steps-list {
-  padding-top: 42px;
+  padding-left: -50px;
+  padding-top: 60px;
   margin: 0;
   list-style: none;
 
   &__item {
-    margin-bottom: 30px;
+    margin-bottom: 69px;
+    // padding-left: ;
     position: relative;
     display: flex;
 
     &__title {
       margin-top: 0;
-      margin-bottom: 0;
+      margin-bottom: 0px;
       padding-bottom: 5px;
       font-family: $main-font;
       font-style: normal;
@@ -56,7 +68,8 @@
   }
   .num {
     position: absolute;
-    top: -25px;
-    left: -45px;
+    top: -21px;
+    // left: -41px;
+    left: -40px;
   }
 }
